Fixed responsiveness for login on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -587,6 +587,62 @@ pre code {
   margin-left: auto;
 }
 
+
+
+@media(max-width: 1440px){
+  .forget-link{
+    margin-left: 11.6rem !important;
+  }
+}
+
+@media(max-width: 1024px){
+  .forget-link{
+    margin-left: 4.25rem !important;
+  }
+
+  .btn-signin{
+    width: 33.7rem !important;
+  }
+}
+@media (max-width: 768px){
+  .forget-link{
+    margin-left: -5.7rem !important;
+  }
+  .btn-signin{
+    width: 23.8rem !important ;
+  }
+}
+
+@media (max-width: 425px){
+  .forget-link{
+    margin-left: -7.5rem !important ;
+  }
+  .btn-signin{
+    width: 21.9rem !important;
+  }
+}
+
+
+@media (max-width: 375px){
+  .forget-link{
+    margin-left: -10.5rem !important;
+  }
+  .btn-signin{
+    width: 19rem !important;
+  }
+}
+
+@media (max-width: 320px ) {
+  .forget-link{
+    margin-left: -13.8rem !important;
+  }
+  .btn-signin{
+    width: 15.8rem !important;
+  }
+}
+
+
+
 @media (min-width: 576px) {
   .container {
     max-width: 540px;
@@ -2311,44 +2367,6 @@ textarea.form-control.is-valid {
   margin-top: 0.25rem;
   font-size: 80%;
   color: #e3342f;
-}
-
-
-@media (max-width: 768px){
-  .forget-link{
-    margin-left: -5.7rem !important;
-  }
-  .btn-signin{
-    width: 23.8rem !important ;
-  }
-}
-
-@media (max-width: 425px){
-  .forget-link{
-    margin-left: -7.5rem !important ;
-  }
-  .btn-signin{
-    width: 21.9rem !important;
-  }
-}
-
-
-@media (max-width: 375px){
-  .forget-link{
-    margin-left: -10.5rem !important;
-  }
-  .btn-signin{
-    width: 19rem !important;
-  }
-}
-
-@media (max-width: 320px ) {
-  .forget-link{
-    margin-left: -13.8rem !important;
-  }
-  .btn-signin{
-    width: 15.8rem !important;
-  }
 }
 
 
